--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,34 +1,34 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: LH-svc-devops
+  name: lh-svc-devops
   labels:
-    app: LH-bwce-devops
+    app: lh-bwce-devops
 spec:
   type: LoadBalancer 
   ports:
   - port: 8085
     targetPort: 8085
   selector:
-    app: LH-bwce-devops
+    app: lh-bwce-devops
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: LH-bwce-devops
+  name: lh-bwce-devops
 spec:
   replicas: 1
   selector:
    matchLabels:
-    app: LH-bwce-devops
+    app: lh-bwce-devops
   template:
     metadata:
-      name: LH-bwce-devops
+      name: lh-bwce-devops
       labels:
-        app: LH-bwce-devops
+        app: lh-bwce-devops
     spec:
       containers:
-        - name: LH-bwce-devops
+        - name: lh-bwce-devops
           image: santosh1208/lh:app1
           imagePullPolicy: Always
           env:
